# opencl_for_intel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  instrucciones para instalar  opencl_test  test.cpp
